--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,12 @@
         <li>
           <a href="01-axios.html">Axios</a>
         </li>
+        <ul class="todo-list"></ul>
+
       </ul>
     </div>
 
-
+    <script type="module" src="./11-module.js"></script>
+    <script type="module" src="./11-authmodule.js"></script>
   </body>
 </html>
