--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,6 @@
     </div>
 
     <script type="module" src="./11-module.js"></script>
-    <script type="module" src="./11-authmodule.js"></script>
+    <script type="module" src="./11-authomodule.js"></script>
   </body>
 </html>
