--- a/src/02-axios-opts.html
+++ b/src/02-axios-opts.html
@@ -6,10 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <ul class="todo-list"></ul>
-    
+<ul class="list"> </ul>
+    <script type="module" src="./02-axios-opts.js"></script>
 
-    <script type="module" src="./01-axios.js"></script>
 </body>
 </html>
